# cmake_template

./: .clang-format  .cmake-format.yaml  .editorconfig  .gitignore  CMakeLists.txt  Dependencies.cmake  Project.cmake  README.md
.github/template/: template_repository
.github/workflows/: ci.yml
cmake/: Hardening.cmake  Sources.cmake
src/intro/: CMakeLists.txt  files.json  main.cpp
src/intro_lib/: CMakeLists.txt  files.json  intro_lib.cpp  intro_lib.hpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
